# first-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/first_ai_agent/: __init__.py  agent.py  config.py  copilot_adapter.py  evaluate.py  m365_manifest.json  main.py  observability.py  schemas.py  service.py
src/first_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
